# Alice-Metadata-bootcamp

./: .travis.yml  README.md
alice/: .travis.yml  ormconfig.json  package-lock.json  package.json  webpack.config.js
alice-front/: package-lock.json  package.json
alice-front/src/: index.html  index.js
alice-front/src/models/: User.js
alice/src/: app.module.ts  app.service.ts  database.module.ts  main.ts
alice/src/providers/: database.providers.ts
alice/src/tasks/: tasks.controller.ts  tasks.entity.ts  tasks.module.ts  tasks.providers.ts  tasks.service.ts
alice/src/tasks/dto/: create-tasks.dto.ts
alice/src/user/: user.controller.ts  user.entity.ts  user.module.ts  user.service.ts
alice/src/user/dto/: create-user.dto.ts  update-user.dto.ts
alice/src/user/interfaces/: user.interface.ts
consumer/: CMakeLists.txt  start
consumer/src/: main.cpp
